--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ https://templatemo.com/tm-559-zay-shop
             <div class="carousel-item active">
                 <div class="container">
                     <div class="row p-5">
-                            <img class="" src="./assets/img/banner_img_01.jpg" alt="" height="600" width="">                        
+                            <img class="" src="./assets/img/banner_img_01.jpg" alt="" height="600" width="500">                        
                     </div>
                 </div>
             </div>
@@ -146,7 +146,6 @@ https://templatemo.com/tm-559-zay-shop
                         
                             <img class="" src="./assets/img/banner_img_02.jpg" alt="" height="600" width="">
 
-                        
                     </div>
                 </div>
             </div>
