--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@ https://templatemo.com/tm-559-zay-shop
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="1"></li>
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner">
+        <div class="carousel-inner"> <!-- carousel-inner -->
             <div class="carousel-item active">
                 <div class="container">
                     <div class="row p-5">
-                           <img class="" src="./assets/img/banner_img_01.jpg" alt="" height="600" width="500">
+                        <img class="" src="./assets/img/banner_img_01.jpg" alt="" height="600" width="">
 
                     </div>
                 </div>
@@ -145,7 +145,7 @@ https://templatemo.com/tm-559-zay-shop
                 <div class="container">
                     <div class="row p-5">
                         
-                            <img class="" src="./assets/img/banner_img_02.jpg" alt="" height="600" width="">
+                         <img class="" src="./assets/img/banner_img_02.jpg" alt="" height="600" width=""> 
 
                     </div>
                 </div>
